--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Projects</h1>
+    <h1>Welcome to OFIDCrypt My Projects</h1>
     <p>Here you can find links to all my GitHub repositories:</p>
     <ul>
         <li><a href="https://github.com/ofidcrypt/Kin-Perk-Sweeps">Project 1</a> - Description of Project 1.</li>
