Added logo to header line 34

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">Massively</a>
+							<img src="assets/images/logo01.png" alt="OFiDCrypt Transparent Logo" />
 					</header>
 
 				<!-- Nav -->
