--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">
 							<img src="assets/images/logo01.png" alt="OFiDCrypt Transparent Logo" />
+						</a>
 					</header>
 
 				<!-- Nav -->
