--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>This is<br />
-						Massively</h1>
+						OFiDCrypt</h1>
 						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
@@ -38,7 +38,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="pages/generic.html">Generic Page</a></li>
 							<li><a href="pages/elements.html">Elements Reference</a></li>
 						</ul>
@@ -58,10 +58,10 @@
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									OFiD Articles</a></h2>
+									<p>Tokin ⬢ Cypher wants to decorate the lake for a casino for some reason<br />
+										easy before but sometimes also great homework. Thank you very much<br />
+										there is no love, but you will also be true.</p>
 								</header>
 								<a href="#" class="image main"><img src="assets/images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
