--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						OFiDCrypt</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
+						<p>Opening the door to the world of Crypocurrency for everyone <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> site template by <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -43,7 +43,7 @@
 							<li><a href="pages/elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">X</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -57,8 +57,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									OFiD Articles</a></h2>
+									<h2><a href="#">And this is <br />
+									OFiDCrypt Articles</a></h2>
 									<p>Tokin ⬢ Cypher wants to decorate the lake for a casino for some reason<br />
 										easy before but sometimes also great homework. Thank you very much<br />
 										there is no love, but you will also be true.</p>
