--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						OFiDCrypt</h1>
-						<p>Opening the door to the world of Crypocurrency for everyone <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> site template by <a href="https://html5up.net">HTML5 UP</a><br />
+						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X. Site template by <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
