--- a/pages/generic.html
+++ b/pages/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>generic Page - Massively by HTML5 UP</title>
+		<title>generic Page - OFiDCrypt by Tokin ⬢ Cypher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html" class="logo">Massively</a>
+						<a href="../index.html" class="logo">OFiDCrypt</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="../index.html">This is Massively</a></li>
-							<li class="active"><a href="generic.html">Generic Page</a></li>
+							<li><a href="../index.html">Home</a></li>
+							<li class="active"><a href="generic.html">About</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -108,7 +108,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Tokin ⬢ Cypher 2024</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
