Changed pic01 image and format

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										easy before but sometimes also great homework. Thank you very much<br />
 										there is no love, but you will also be true.</p>
 								</header>
-								<a href="#" class="image main"><img src="assets/images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="assets/images/pic01.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
