Update js.main path.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</article>
 
 				<!-- Link to the JavaScript file -->
-				<script src="js/main.js"></script>
+				<script src="assets/js/main.js"></script>
 				</body>
 				
 				</html>
