--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<link rel="icon" href="/favicon.png.png" type="image/png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Dynamic Image Preview</title>
+		<!-- Link to jQuery library -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
