--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Dynamic Image Preview</title>
-		<!-- Link to jQuery library -->
+		<!-- Load jQuery first -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<!-- Load breakpoints.min.js next -->
+		<script src="assets/js/breakpoints.min.js"></script>
+		<!-- Finally, load your main JavaScript file -->
+		<script src="assets/js/main.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
