--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Dynamic Image Preview</title>
-		<!-- Load jQuery first -->
+<!-- Link necessary JS libraries -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<!-- Load breakpoints.min.js next -->
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/util.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
-		<!-- Finally, load your main JavaScript file -->
 		<script src="assets/js/main.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
