--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="https://formspree.io/f/mzzbzojq">
+							<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" required>
 									</div>
 									<div class="field">
-										<label for="email">E-mail</label>
+										<label for="email">Email</label>
 										<input type="email" name="email" id="email" required>
 									</div>
 									<div class="field">
@@ -203,7 +203,6 @@
 									<li><input type="submit" value="Send Message"></li>
 								</ul>
 							</form>
-							
 							<script>
 								function verifyRecaptcha() {
 									var response = grecaptcha.getResponse();
@@ -214,6 +213,7 @@
 										return true;
 									}
 								}
+							</script>
 							
 						</section>
 						<section class="split contact">
