Updated text and copied templates from index to vipwithcode.html, previously generic.html

--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 		<link rel="icon" href="/favicon.png.png" type="image/png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		
 		<!-- Link necessary JS libraries -->
-		<script src="assets/js/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrollex.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/main.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -34,7 +32,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						OFiDCrypt</h1>
-						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge.<br />Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X.<br />
+						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X<br />
 						<!-- Site template by <a href="https://html5up.net">HTML5 UP </a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. --> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -52,7 +50,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="pages/generic.html">About</a></li>
+							<li><a href="pages/vipwithcode.html">VIP with Code</a></li>
 							<li><a href="pages/elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -92,73 +90,73 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">February 29, 2104</span>
+										<h2><a href="#">Article Heading<br />
+										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 							</section>
@@ -214,17 +212,15 @@
 									}
 								}
 							</script>
-							
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Remote Offices</h3>
+								<p>British Columbia, Canada</p>
 							</section>
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Telegram</h3>
+								<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
@@ -233,7 +229,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://x.com/OFiDCrypt" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://x.com/OFiDCrypt" class="icon brands alt fa-twitter"><span class="label">X</span></a></li>
 									<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
