--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -7,21 +7,21 @@
 <html>
 	<head>
 		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
-		<link rel="icon" href="/favicon.png.png" type="image/png"/>
+		<link rel="icon" href="../favicon.png.png" type="image/png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- Link necessary JS libraries -->
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/main.js"></script>
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
+		<script src="../assets/js/jquery.scrollex.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/breakpoints.min.js"></script>
+		<script src="../assets/js/main.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+	</head>	
 	
 	<body class="is-preload">
 
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
 							<li class="active"><a href="vipwithcode.html">VIP with Code</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -128,8 +128,8 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Tokin ⬢ Cypher 2024</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				<div id="copyright">
+					<ul><li>&copy; Tokin ⬢ Cypher 2024</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
