--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						OFiDCrypt</h1>
-						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X<br />
+						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. <br /> Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X.
 						<!-- Site template by <a href="https://html5up.net">HTML5 UP </a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. --> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -51,7 +51,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="pages/vipwithcode.html">VIP with Code</a></li>
-							<li><a href="pages/elements.html">Elements Reference</a></li>
+							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -106,7 +106,7 @@
 										What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves navigating through diverse perspectives. Such exploration brings new insights and expands our understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
@@ -182,6 +182,7 @@
 					<footer id="footer">
 						<section>
 							<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
+								<h2>Contact Us</h2> <!-- New heading added here -->
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
