--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="pages/vipwithcode.html">VIP with Code</a></li>
+							<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
