--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li class="active"><a href="vipwithcode.html">VIP with Code</a></li>
+							<li class="active"><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
@@ -56,13 +56,13 @@
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h1>This is<br />
-									VIP with Code</h1>
-									<p>You can't land here without the Code Wallet app. Perhaps you are some kind of special.<br />
+									VIP Lounge with Code</h1>
+									<p>You can't land beyond this point without the Code Wallet app. Perhaps you are some kind of special.<br />
 									It is here where the real fun begins, with cash links, contests, exclusive content and more. Stay tuned!.</p>
 								</header>
 								<div class="image main"><img src="../assets/images/pic01.png" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
+								<p>Introduction to Your World of Knowledge and Tools. Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of digital finance. Join us on this exciting voyage and take control of your financial future."</p>
 							</section>
 
 					</div>
@@ -71,6 +71,7 @@
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
+							<h2>Contact Us</h2> <!-- New heading added here -->
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
@@ -93,7 +94,7 @@
 						<script>
 							function verifyRecaptcha() {
 								var response = grecaptcha.getResponse();
-								if(response.length == 0) {
+								if (response.length == 0) {
 									alert("Please complete the reCAPTCHA.");
 									return false;
 								} else {
