Centre and space elements class icons alt

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-							<h2>Contact Us</h2> <!-- New heading added here -->
+							<h2 class="centered-heading">Got Questions?</h2>
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
@@ -213,19 +213,20 @@
 								}
 							}
 						</script>
+					</section>
+					<section class="split contact">
+						<section class="alt">
+							<h3>Remote</h3>
+							<p>British Columbia, Canada</p>
 						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Remote Offices</h3>
-								<p>British Columbia, Canada</p>
-							</section>
-							<section>
-								<h3>Telegram</h3>
-								<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+						<section>
+							<h3>Telegram</h3>
+							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+						</section>
+						<section>
+							<h3>Email</h3>
+							<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -235,9 +236,8 @@
 									<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</section>
 						</section>
-					</footer>
+				</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
