--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -71,7 +71,7 @@
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-							<h2>Contact Us</h2> <!-- New heading added here -->
+							<h2>Got Questions?</h2> <!-- New heading added here -->
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
@@ -103,18 +103,19 @@
 							}
 						</script>
 					</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Remote Offices</h3>
-								<p>British Columbia, Canada</p>
-							</section>
-							<section>
-								<h3>Telegram</h3>
-								<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+					<section class="split contact">
+						<section class="alt">
+							<h3>Remote</h3>
+							<p>British Columbia, Canada</p>
+						</section>
+						<section>
+							<h3>Telegram</h3>
+							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+						</section>
+						<section>
+							<h3>Email</h3>
+							<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -124,7 +125,6 @@
 									<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</section>
 						</section>
 					</footer>
 
