--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="vipwithcode.html">VIP with Code</a></li>
+							<li><a href="vipwithcode.html">VIP Area</a></li>
 							<li class="active"><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
