Fixed js order critical and non-critical.

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,26 +7,20 @@
 <html>
 	<head>
 		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
-		<link rel="icon" href="../favicon.png.png" type="image/png"/>
+		<link rel="icon" href="../favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Link necessary JS libraries -->
-		<script src="../assets/js/jquery.min.js"></script>
-		<script src="../assets/js/browser.min.js"></script>
-		<script src="../assets/js/jquery.scrollex.min.js"></script>
-		<script src="../assets/js/jquery.scrolly.min.js"></script>
-		<script src="../assets/js/util.js"></script>
-		<script src="../assets/js/breakpoints.min.js"></script>
-		<script src="../assets/js/main.js"></script>
-		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+		<!-- Essential JS libraries if used by other scripts -->
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>	
 
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper" class="fade-in">
 
 				<!-- Header -->
 					<header id="header">
@@ -507,5 +501,12 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					</div>
 
 			</div>
+			<!-- Link to non-critical JavaScript files -->
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/main.js"></script>		
 	</body>
 </html>
