--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
 <html>
 	<head>
 		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
-		<link rel="icon" href="/favicon.png.png" type="image/png"/>
+		<link rel="icon" href="favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Link necessary JS libraries -->
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/main.js"></script>
-		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Essential JS libraries if used by other scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 	
 	<body class="is-preload">
@@ -32,7 +26,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						OFiDCrypt</h1>
-						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. <br /> Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X.
+						<p>Opening the door to the world of Cryptocurrency for everyone through articles, tools and knowledge. <br /> Visit <a href="https://x.com/OFiDCrypt">@OFiDCrypt</a> on X
 						<!-- Site template by <a href="https://html5up.net">HTML5 UP </a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. --> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -78,12 +72,6 @@
 						<li><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="button large">Preview Article</Article></a></li>
 					</ul>
 				</article>
-
-				<!-- Link to the JavaScript file -->
-				<script src="assets/js/main.js"></script>
-				</body>
-				
-				</html>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -245,5 +233,12 @@
 					</div>
 
 			</div>
+			<!-- Link to non-critical JavaScript files -->
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/main.js"></script>
 	</body>
 </html>
