Formatting changes and removed URL from index logo, plus add rules for lower case "i"

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -55,8 +55,8 @@
 									It is here where the real fun begins, with cash links, contests, exclusive content and more. Stay tuned!.</p>
 								</header>
 								<div class="image main"><img src="../assets/images/pic01.png" alt="" /></div>
-								<p>Introduction to Your World of Knowledge and Tools. Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of digital finance. Join us on this exciting voyage and take control of your financial future."</p>
+								<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future."</p>
 							</section>
 
 					</div>
