Adjust error in page tags.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher</title>
+		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
 		<link rel="icon" href="favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
