--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html" class="logo">OFiDCrypt</a>
+						<a href="../index.html" class="logo">OF<span class="i">i</span>DCrypt</a>
 					</header>
 
 				<!-- Nav -->
