Adjust font size and style.

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,9 +23,9 @@
 		<div id="wrapper" class="fade-in">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="../index.html" class="logo">OF<span class="i">i</span>DCrypt</a>
-					</header>
+				<header id="header">
+					<div class="logo">OF<span class="i">i</span>DCrypt</div>
+				</header>
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -438,7 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-							<h2>Got Questions?</h2> <!-- New heading added here -->
+							<h2 class="centered-heading">Got Questions?</h2>
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
