--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 						</script>
 					</section>
 					<section class="split contact">
+						<h2 class="centered-heading">Contact</h2>
 						<section class="alt">
 							<h3>Remote</h3>
 							<p>British Columbia, Canada</p>
