Added pagination functionality, will not load page 1.

--- a/pages/about.html
+++ b/pages/about.html
@@ -470,7 +470,9 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							}
 						</script>
 						</section>
+						
 						<section class="split contact">
+							<h2 class="centered-heading">Contact</h2>
 							<section class="alt">
 								<h3>Remote</h3>
 								<p>British Columbia, Canada</p>
