--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -97,7 +97,9 @@
 							}
 						</script>
 					</section>
+					
 					<section class="split contact">
+						<h2 class="centered-heading">Contact</h2>
 						<section class="alt">
 							<h3>Remote</h3>
 							<p>British Columbia, Canada</p>
@@ -120,7 +122,7 @@
 									<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 						</section>
-					</footer>
+				</footer>
 
 				<!-- Copyright -->
 				<div id="copyright">
