Fixed pagination linking, added number selector above posts.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
 					</ul>
 				</article>
 
+				<!-- Header for Pagination -->
+				<!-- Top Pagination -->
+					<div class="pagination">
+						<a href="#" class="page active" data-page="1">1</a>
+						<a href="#" class="page" data-page="2">2</a>
+					</div>
+
 				 <!-- Posts Container -->
 				 <section id="posts-container">
 					<div id="index-posts">
@@ -209,8 +216,8 @@
 							<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
 						</section>
 						<section>
-							<h3>New Platform</h3>
-							<p>Details or link for new platform</p>
+							<h3>Discord</h3>
+							<p><a href="https://discordapp.com/users/1287308732275101777">@ofidcrypt</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
