--- a/pages/about.html
+++ b/pages/about.html
@@ -472,7 +472,6 @@ print 'It took ' + i + ' iterations to sort the deck.';
 						</section>
 						
 						<section class="split contact">
-							<h2 class="centered-heading">Contact</h2>
 							<section class="alt">
 								<h3>Remote</h3>
 								<p>British Columbia, Canada</p>
@@ -484,17 +483,21 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							<section>
 								<h3>Email</h3>
 								<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
-	
-								</section>
-								<section>
-									<h3>Social</h3>
-									<ul class="icons alt">
-										<li><a href="https://x.com/OFiDCrypt" class="icon brands alt fa-twitter"><span class="label">X</span></a></li>
-										<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									</ul>
 							</section>
+							<section>
+								<h3>Discord</h3>
+								<p><a href="https://discordapp.com/users/1287308732275101777">@ofidcrypt</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://x.com/OFiDCrypt" class="icon brands alt fa-twitter"><span class="label">X</span></a></li>
+									<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
 					</footer>
 
 				<!-- Copyright -->
