Fixed formatting of number selector including functionality.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,15 @@
 				</article>
 
 				<!-- Header for Pagination -->
-				<!-- Top Pagination -->
+				<header>
 					<div class="pagination">
+						<a href="#" class="previous">Prev</a>
 						<a href="#" class="page active" data-page="1">1</a>
 						<a href="#" class="page" data-page="2">2</a>
+						<!-- Add more pages as needed -->
+						<a href="#" class="next">Next</a>
 					</div>
+				</header>
 
 				 <!-- Posts Container -->
 				 <section id="posts-container">
@@ -137,8 +141,11 @@
 				<!-- Footer for Pagination -->
 				<footer>
 					<div class="pagination">
+						<a href="#" class="previous">Prev</a>
 						<a href="#" class="page active" data-page="1">1</a>
 						<a href="#" class="page" data-page="2">2</a>
+						<!-- Add more pages as needed -->
+						<a href="#" class="next">Next</a>
 					</div>
 				</footer>
 			</div>
