--- a/posts-page2.html
+++ b/posts-page2.html
@@ -2,7 +2,7 @@
 <article>
     <header>
         <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />More Content</a></h2>
+        <h2><a href="#">Test Page 2<br />Article 1</a></h2>
     </header>
     <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
     <p>"Exploring additional topics brings even more insights and perspectives..."</p>
@@ -13,7 +13,7 @@
 <article>
     <header>
         <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />More Content</a></h2>
+        <h2><a href="#">Test Page 2<br />Article 2</a></h2>
     </header>
     <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
     <p>"Exploring additional topics brings even more insights and perspectives..."</p>
@@ -24,7 +24,7 @@
 <article>
     <header>
         <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />More Content</a></h2>
+        <h2><a href="#">Test Page 2<br />Article 3</a></h2>
     </header>
     <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
     <p>"Exploring additional topics brings even more insights and perspectives..."</p>
@@ -35,7 +35,7 @@
 <article>
     <header>
         <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />More Content</a></h2>
+        <h2><a href="#">Test Page 2<br />Article 4</a></h2>
     </header>
     <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
     <p>"Exploring additional topics brings even more insights and perspectives..."</p>
