--- a/posts-page2.html
+++ b/posts-page2.html
@@ -1,45 +1,52 @@
 <!-- Posts Page 2 Content -->
-<article>
-    <header>
-        <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />Article 1</a></h2>
-    </header>
-    <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
-    <p>"Exploring additional topics brings even more insights and perspectives..."</p>
-    <ul class="actions special">
-        <li><a href="#" class="button">Coming Soon</a></li>
-    </ul>
-</article>
-<article>
-    <header>
-        <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />Article 2</a></h2>
-    </header>
-    <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
-    <p>"Exploring additional topics brings even more insights and perspectives..."</p>
-    <ul class="actions special">
-        <li><a href="#" class="button">Coming Soon</a></li>
-    </ul>
-</article>
-<article>
-    <header>
-        <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />Article 3</a></h2>
-    </header>
-    <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
-    <p>"Exploring additional topics brings even more insights and perspectives..."</p>
-    <ul class="actions special">
-        <li><a href="#" class="button">Coming Soon</a></li>
-    </ul>
-</article>
-<article>
-    <header>
-        <span class="date">May 5, 2017</span>
-        <h2><a href="#">Test Page 2<br />Article 4</a></h2>
-    </header>
-    <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
-    <p>"Exploring additional topics brings even more insights and perspectives..."</p>
-    <ul class="actions special">
-        <li><a href="#" class="button">Coming Soon</a></li>
-    </ul>
-</article>
+<!-- Posts Container -->
+<section id="posts-container">
+    <div id="posts-page2-posts">
+        <section class="posts">
+            <article>
+                <header>
+                    <span class="date">May 5, 2017</span>
+                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">Coming Soon</a></li>
+                </ul>
+            </article>
+            <article>
+                <header>
+                    <span class="date">May 5, 2017</span>
+                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">Coming Soon</a></li>
+                </ul>
+            </article>
+            <article>
+                <header>
+                    <span class="date">May 5, 2017</span>
+                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">Coming Soon</a></li>
+                </ul>
+            </article>
+            <article>
+                <header>
+                    <span class="date">May 5, 2017</span>
+                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">Coming Soon</a></li>
+                </ul>
+            </article>
+        </section>
+    </div>
+</section>
