Text changes and removed placeholder article button links.

--- a/posts-page2.html
+++ b/posts-page2.html
@@ -11,7 +11,7 @@
                 <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#" class="button">Coming Soon</a></li>
+                    <li class="button">Coming Soon</li>
                 </ul>
             </article>
             <article>
@@ -22,7 +22,7 @@
                 <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#" class="button">Coming Soon</a></li>
+                    <li class="button">Coming Soon</li>
                 </ul>
             </article>
             <article>
@@ -33,7 +33,7 @@
                 <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#" class="button">Coming Soon</a></li>
+                    <li class="button">Coming Soon</li>
                 </ul>
             </article>
             <article>
@@ -44,7 +44,7 @@
                 <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#" class="button">Coming Soon</a></li>
+                    <li class="button">Coming Soon</li>
                 </ul>
             </article>
         </section>
