--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
+		<title>Crypto Made Easy | by OFiDCrypt</title>
 		<link rel="icon" href="favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -100,7 +100,7 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
+										<li class="button">Coming Soon</li>
 									</ul>
 								</article>
 								<article>
@@ -113,7 +113,7 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
+										<li class="button">Coming Soon</li>
 									</ul>
 								</article>
 								<article>
@@ -126,7 +126,7 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
+										<li class="button">Coming Soon</li>
 									</ul>
 								</article>
 								<article>
@@ -139,7 +139,7 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
+										<li class="button">Coming Soon</li>
 									</ul>
 								</article>
 							</section>
@@ -159,7 +159,7 @@
 				</div>
 
 
-				<!-- Footer -->
+				<!-- Footer Contact Form -->
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
@@ -196,22 +196,23 @@
 						</script>
 					</section>
 					
+					<!-- Footer Social Location, Links & Other Contact -->
 					<section class="split contact">
-						<section class="alt">
-							<h3>Remote</h3>
-							<p>British Columbia, Canada</p>
-						</section>
 						<section>
-							<h3>Telegram</h3>
-							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+							<h3>Location</h3>
+							<p>British Columbia, Canada</p>
 						</section>
 						<section>
 							<h3>Email</h3>
 							<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
 						</section>
 						<section>
+							<h3>Telegram</h3>
+							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+						</section>
+						<section>
 							<h3>Discord</h3>
-							<p><a href="https://discordapp.com/users/1287308732275101777">@ofidcrypt</a></p>
+							<p><a href="https://discordapp.com/users/1287308732275101777">@OFiDCrypt</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
