--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>OFiDCrypt by Tokin ⬢ Cypher</title>
+		<title>Crypto Made Easy | by OFiDCrypt</title>
 		<link rel="icon" href="../favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
