--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<article class="post featured">
 						<header class="major">
 							<span class="date">Featured</span>
-							<h2><a href="#">Learn With <br />OF<span class="i">i</span>DCrypt Articles</a></h2>
+							<h2><a href="#">Learn With <br />Articles</a></h2>
 							<p>Tokin ⬢ Cypher is the Identity Verified OFiDCrypt creator, publishing articles on Pennypost.co, powered
 								by Code Inc.</p>
 							<p>Click "Preview Article" below to get a sneak peek of contents, available via Code Wallet for only $0.25
